heroku + fix qery to db

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -6,4 +6,4 @@ html
     link(href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css", rel="stylesheet")
   body
     block content
-    script(src='/public/javascripts/main.js')
+    script(src='/javascripts/main.js' )
