--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -7,26 +7,28 @@ a {
   color: #00B7FF;
 }
 
-a {color: black;margin: 5px; text-decoration: none;}
+datalist {
+  position: relative;
+  background-color: white;
+  border: 1px solid blue;
+  border-radius: 0 0 5px 5px;
+  border-top: none;
+  font-family: sans-serif;
+  width: 350px;
+  padding: 5px;
 
-.dropdown-menu li:hover .sub-menu {
-    visibility: visible;
 }
 
-.dropdown:hover .dropdown-menu {
-    display: block;
-    margin-top: 0;
+option {
+  background-color: white;
+  padding: 4px;
+  color: blue;
+  margin-bottom: 1px;
+   font-size: 18px;
+  cursor: pointer;
 }
 
-.dropdown-menu .sub-menu {
-    left: 100%;
-    position: absolute;
-    top: 0;
-    visibility: hidden;
-    margin-top: -1px;
+option:hover, .active{
+  background-color: lightblue;
 }
-input.form-control{
-  width:300px;
-  display: inline-block;
-  margin-left: 25px;
-}
+
