--- a/views/layout.jade
+++ b/views/layout.jade
@@ -4,6 +4,11 @@ html
     title= title
     link(rel='stylesheet', href='/stylesheets/style.css')
     link(href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css", rel="stylesheet")
+    link(href="https://code.jquery.com/ui/1.12.1/themes/ui-lightness/jquery-ui.css", rel="stylesheet")
+
   body
     block content
+  
+
+
     script(src='/javascripts/main.js' )
