--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -10,11 +10,11 @@ a {
 datalist {
   position: relative;
   background-color: white;
-  border: 1px solid blue;
+  border: 1px solid #dc3545;
   border-radius: 0 0 5px 5px;
   border-top: none;
   font-family: sans-serif;
-  width: 350px;
+  width: 100%;
   padding: 5px;
 
 }
@@ -22,13 +22,70 @@ datalist {
 option {
   background-color: white;
   padding: 4px;
-  color: blue;
+  color: #dc3545;
   margin-bottom: 1px;
    font-size: 18px;
   cursor: pointer;
 }
 
-option:hover, .active{
+
+.bus{
+  padding: 5px 10px !important;
+  margin-right: 15px;
+  margin-bottom: 10px;
+}
+
+#regions_list,#stops_list{
+  padding: 0px;
+}
+
+.buses{
+  padding: 15px;
+}
+
+option:hover{
+  background-color: #dc3545;
+  color:#fff;
+}
+
+.active{
   background-color: lightblue;
 }
 
+
+.prety{
+  padding: 25px;
+}
+
+.loc{
+  position: relative;
+}
+
+.loc:after{
+  content: "";
+  position: absolute;
+  top: 25px;
+  width: 100%;
+  height: 1px;
+  border-bottom: 2px solid lightblue;
+  display: block;
+}
+
+
+.time{
+  position: relative;
+}
+
+.time:after{
+  content: "";
+  position: absolute;
+  top: 25px;
+  width: 100%;
+  height: 1px;
+  border-bottom: 2px solid lightblue;
+  display: block;
+}
+
+#regchs{
+  margin-bottom: 15px;
+}
