--- a/views/index.jade
+++ b/views/index.jade
@@ -22,7 +22,7 @@ block content
         input( id = "showStops" class="btn btn-block btn-outline-secondary" type='submit' value='show') 
   .buses
   .top5
-    table.table
+    table.table.table-hover
       thead
         tr
           th(scope='col') #
